--- a/cuadernito-back/src/main/resources/application.properties
+++ b/cuadernito-back/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 spring.application.name=cuadernito-back
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/cuadernito_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# JWT Configuration
+# IMPORTANTE: Cambia esta clave en produccion por una generada aleatoriamente
+# Longitud minima: 32 caracteres (256 bits) para HMAC-SHA256
+jwt.secret=cuadernito-secret-key-locales-barriales
+jwt.expiration=86400000
+
+# Server Configuration
+server.port=8080
+
+# SpringDoc OpenAPI (Swagger) Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.disable-swagger-default-url=true
